[gd_scene load_steps=16 format=3 uid="uid://dhmlqeopnf20b"]

[ext_resource type="Script" uid="uid://dwl1k2tls2fq6" path="res://Menu.gd" id="1_7w6vc"]
[ext_resource type="Texture2D" uid="uid://cyx5bwva6hahf" path="res://arts/mainmenu.png" id="2_tmiws"]
[ext_resource type="VideoStream" uid="uid://c4qwuyltrrs8h" path="res://arts/Blazing Cube Logo_free.ogv" id="5_r06ob"]
[ext_resource type="Texture2D" uid="uid://bd6bxfqaf4jrh" path="res://arts/sprite_effects_fire_sprite_fx_0062.png" id="6_1cubx"]

[sub_resource type="Resource" id="Resource_4hy44"]
metadata/__load_path__ = "res://assets/buttonclick.mp3"

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_lws1k"]
polygon = PackedVector2Array(0, 0, 80, 0, 80, 32, 0, 32)

[sub_resource type="Resource" id="Resource_ytr4m"]
metadata/__load_path__ = "res://assets/buttonclick.mp3"

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_7j4mj"]
polygon = PackedVector2Array(0, 0, 80, 0, 80, 32, 0, 32)

[sub_resource type="Resource" id="Resource_l48gv"]
metadata/__load_path__ = "res://assets/buttonclick.mp3"

[sub_resource type="Resource" id="Resource_ecwwl"]
metadata/__load_path__ = "res://assets/Nordic Folk Music â€“ Jafnan _ Fantasy, Magical, Beautiful.mp3"

[sub_resource type="Environment" id="Environment_sucyh"]
background_mode = 3

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_q1er2"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2vvoy"]
polygon = PackedVector2Array(200, 272, 1184, 256, 1120, 576, 176, 592)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_aac00"]
polygon = PackedVector2Array(600, 40, 688, 48, 696, 552, 592, 544)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_3p2m3"]
polygon = PackedVector2Array(-104, 536, 1184, 536, 1192, 696, -40, 696)

[node name="Menu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w6vc")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
stream = ExtResource("5_r06ob")
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.45, 0.638424)
texture = ExtResource("2_tmiws")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 536.0
offset_top = 264.0
offset_right = 616.0
offset_bottom = 295.0
action_mode = 0
text = "PLAY"

[node name="Click" type="AudioStreamPlayer" parent="Play"]
stream = SubResource("Resource_4hy44")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Play"]
visible = false
occluder = SubResource("OccluderPolygon2D_lws1k")

[node name="Options" type="Button" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 304.0
offset_right = 615.0
offset_bottom = 335.0
text = "OPTIONS"

[node name="Click" type="AudioStreamPlayer" parent="Options"]
stream = SubResource("Resource_ytr4m")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Options"]
occluder = SubResource("OccluderPolygon2D_7j4mj")

[node name="Quit" type="Button" parent="."]
layout_mode = 2
offset_left = 536.0
offset_top = 344.0
offset_right = 616.0
offset_bottom = 375.0
text = "QUIT"

[node name="Click" type="AudioStreamPlayer" parent="Quit"]
stream = SubResource("Resource_l48gv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("Resource_ecwwl")
volume_db = -20.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sucyh")

[node name="PointLight2D" type="PointLight2D" parent="WorldEnvironment"]
position = Vector2(376, 32)
color = Color(1, 1, 0.290196, 1)
energy = 7.31
shadow_enabled = true
texture = ExtResource("6_1cubx")
texture_scale = 2.0

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
color = Color(1, 1, 0.239216, 1)
polygon = PackedVector2Array(496, 288, 552, 232, 616, 248, 656, 264, 648, 312, 656, 368, 600, 392, 552, 408, 504, 360, 512, 320)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Polygon2D"]
occluder = SubResource("OccluderPolygon2D_q1er2")

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
z_index = -2
color = Color(0.0196078, 1, 1, 1)
polygon = PackedVector2Array(672, 600, 640, 536, 576, 496, 472, 440, 432, 344, 384, 288, 312, 232, 200, 136, 72, 16, 24, -80, 96, -104, 216, 16, 440, 48, 576, 96, 624, 160, 704, 200, 824, 232, 960, 240, 1056, 296, 1144, 328, 1232, 336, 1208, 664, 656, 664)

[node name="Polygon2D3" type="Polygon2D" parent="."]
z_index = -2
color = Color(0.615686, 0.254902, 0, 1)
polygon = PackedVector2Array(256, 576, 960, 576, 1024, 512, 1024, 456, 960, 392, 960, 355.77, 984, 368, 1008, 352, 1056, 384, 1016, 328, 1088, 352, 1016, 296, 1000, 272, 936, 288, 928, 360.527, 928, 392, 960, 432, 976, 456, 968, 480, 952, 496, 928, 504, 344, 512, 312, 480, 312, 440, 344, 400, 376, 352, 368, 312, 336, 296, 296, 304, 256, 344, 248, 400, 280, 424, 304, 400, 320, 376, 304, 360, 272, 400, 272, 368, 304, 344, 336, 336, 344, 352, 264, 456, 224, 488, 224, 552)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Polygon2D3"]
z_index = -10
occluder = SubResource("OccluderPolygon2D_2vvoy")

[node name="Polygon2D4" type="Polygon2D" parent="."]
z_index = -2
color = Color(0.615686, 0.254902, 0, 1)
polygon = PackedVector2Array(632, 520, 648, 520, 648, 56, 632, 56)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Polygon2D4"]
occluder = SubResource("OccluderPolygon2D_aac00")

[node name="Polygon2D5" type="Polygon2D" parent="."]
z_index = -1
color = Color(0.615686, 0.254902, 0, 1)
polygon = PackedVector2Array(424, 208, 432, 216, 856, 112, 856, 104)

[node name="Polygon2D6" type="Polygon2D" parent="."]
z_index = -2
polygon = PackedVector2Array(840, 112, 896, 200, 904, 320, 856, 440, 456, 528, 496, 416, 480, 296, 440, 216, 648.452, 161.802)

[node name="Polygon2D7" type="Polygon2D" parent="."]
z_index = -2
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(456, 528, 496, 416, 480, 296, 440, 216, 520, 192, 560, 280, 576, 408, 544, 512)

[node name="Polygon2D7" type="Polygon2D" parent="Polygon2D7"]
position = Vector2(144, -40)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(456, 536, 496, 416, 480, 296, 440, 216, 520, 192, 560, 280, 576, 408, 544, 520)

[node name="Polygon2D7" type="Polygon2D" parent="Polygon2D7/Polygon2D7"]
position = Vector2(136, -24)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(456, 528, 496, 416, 480, 296, 440, 208, 520, 184, 560, 280, 576, 408, 544, 512)

[node name="Polygon2D8" type="Polygon2D" parent="."]
color = Color(0.8, 0.568627, 0.321569, 1)
polygon = PackedVector2Array(640, 104, 648, 104, 960, 488, 952, 488)

[node name="Polygon2D8" type="Polygon2D" parent="Polygon2D8"]
color = Color(0.729412, 0.4, 0.0862745, 1)
polygon = PackedVector2Array(640, 104, 648, 104, 304, 448, 304, 440)

[node name="Polygon2D11" type="Polygon2D" parent="."]
z_index = -3
position = Vector2(-736, 24)
polygon = PackedVector2Array(1224, 456, 1232, 448, 1263.77, 448, 1272, 456, 1280, 463.25, 1280, 496.49, 1272, 504, 1263.77, 512, 1232, 512, 1224, 504, 1216, 496.358, 1216, 463.912)

[node name="Polygon2D9" type="Polygon2D" parent="Polygon2D11"]
position = Vector2(-64, 0)
color = Color(0.364706, 0.364706, 0.364706, 1)
polygon = PackedVector2Array(1312, 480, 1307.9, 472, 1312, 472, 1316.11, 472, 1312, 480, 1320, 476.626, 1320, 479.936, 1320, 483.38, 1312, 480, 1312, 480, 1315.72, 488, 1312, 488, 1312, 488, 1308.04, 488, 1312, 480, 1304, 483.644, 1304, 475.566)

[node name="Polygon2D10" type="Polygon2D" parent="."]
position = Vector2(-480, 24)
polygon = PackedVector2Array(1224, 456, 1232, 448, 1263.77, 448, 1272, 456, 1280, 463.25, 1280, 496.49, 1272, 504, 1263.77, 512, 1232, 512, 1224, 504, 1216, 496.358, 1216, 463.912)

[node name="Polygon2D9" type="Polygon2D" parent="Polygon2D10"]
position = Vector2(-64, 0)
color = Color(0.364706, 0.364706, 0.364706, 1)
polygon = PackedVector2Array(1312, 480, 1307.9, 472, 1312, 472, 1316.11, 472, 1312, 480, 1320, 476.626, 1320, 479.936, 1320, 483.38, 1312, 480, 1312, 480, 1315.72, 488, 1312, 488, 1312, 488, 1308.04, 488, 1312, 480, 1304, 483.644, 1304, 475.566)

[node name="Polygon2D12" type="Polygon2D" parent="."]
position = Vector2(-832, 24)
polygon = PackedVector2Array(1224, 456, 1232, 448, 1263.77, 448, 1272, 456, 1280, 463.25, 1280, 496.49, 1272, 504, 1263.77, 512, 1232, 512, 1224, 504, 1216, 496.358, 1216, 463.912)

[node name="Polygon2D9" type="Polygon2D" parent="Polygon2D12"]
position = Vector2(-64, 0)
color = Color(0.364706, 0.364706, 0.364706, 1)
polygon = PackedVector2Array(1312, 480, 1307.9, 472, 1312, 472, 1316.11, 472, 1312, 480, 1320, 476.626, 1320, 479.936, 1320, 483.38, 1312, 480, 1312, 480, 1315.72, 488, 1312, 488, 1312, 488, 1308.04, 488, 1312, 480, 1304, 483.644, 1304, 475.566)

[node name="Polygon2D9" type="Polygon2D" parent="."]
position = Vector2(-368, 24)
polygon = PackedVector2Array(1224, 456, 1232, 448, 1263.77, 448, 1272, 456, 1280, 463.25, 1280, 496.49, 1272, 504, 1263.77, 512, 1232, 512, 1224, 504, 1216, 496.358, 1216, 463.912)

[node name="Polygon2D9" type="Polygon2D" parent="Polygon2D9"]
position = Vector2(-64, 0)
color = Color(0.364706, 0.364706, 0.364706, 1)
polygon = PackedVector2Array(1312, 480, 1307.9, 472, 1312, 472, 1316.11, 472, 1312, 480, 1320, 476.626, 1320, 479.936, 1320, 483.38, 1312, 480, 1312, 480, 1315.72, 488, 1312, 488, 1312, 488, 1308.04, 488, 1312, 480, 1304, 483.644, 1304, 475.566)

[node name="Polygon2D13" type="Polygon2D" parent="."]
color = Color(0, 0.317647, 1, 1)
polygon = PackedVector2Array(992, 560, 952, 576, 912, 560, 872, 576, 824, 560, 760, 576, 688, 560, 648, 576, 600, 568, 544, 576, 480, 560, 440, 576, 376, 560, 344, 576, 288, 560, 248, 576, 216, 560, 176, 584, 136, 552, 96, 576, 64, 552, 32, 584, 8, 544, -56, 584, -48, 632, 16, 696, 1184, 688, 1168, 544, 1128, 576, 1088, 560, 1040, 576)

[node name="LightOccluder2D" type="LightOccluder2D" parent="Polygon2D13"]
occluder = SubResource("OccluderPolygon2D_3p2m3")

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="ready" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_ready"]
